# SOBER

./: .env.example  .gitignore  CONTRACT.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: brain-ci.yml  brain-nightly.yml
deploy/: hf-README.md
docs/: BLOG.md  CI.md  DEMO_SCRIPT.md  DEPLOY.md  SUBMISSION.md  VIDEO.md
evals/: forbidden.yaml  must_know.yaml  poison.yaml  structure.yaml
golden/: evals_clean.json  evals_leaked.json  graph_clean.json  graph_leaked.json  meta.json
knowledge/: README.md  cache-runbook.md  db-outage-runbook.md  deploy-runbook.md  incident-comms.md  oncall.md  secrets-policy.md  service-map.md  slo.md
knowledge/poisoned/: stale-advice.md
knowledge/retracted/: secret-key.md
research/: memory_ci_vs_rag.md
scripts/: build_golden.py  capture.js  check_key.py  check_llm.py  demo_bisect.py  demo_core.py  gate2_forget_roundtrip.py  gate3_export_roundtrip.py  test_bisect_logic.py  test_improve_gate_logic.py  verify_review_fixes.py
sober/: __init__.py  bisect.py  brain.py  ci.py  cli.py  config.py  diff.py  evals.py  snapshot.py
viewer/: artifact.html  demo-reel.html  demo-reel.srt  explainer.html  index.html  reel-artifact.html
web/: dashboard-artifact.html  dashboard.html
