[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sober"
version = "0.1.0"
description = "SOBER — CI/CD for Agent Brains. Treat your Cognee memory as a versioned, testable, revertable, deployable artifact."
requires-python = ">=3.10"
dependencies = [
    "cognee",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
brain = "sober.cli:app"

[tool.setuptools]
packages = ["sober"]
